--- a/p1420241.html
+++ b/p1420241.html
@@ -1,6 +1,4 @@
-<html>
-<body>
-<h1>This is a secure website<h1></p>
-DCPE/3B03, Lee Jian Yong (p1420241)</p>
-</body>
-</html>
+<html><body><h1>P1420241</h1>
+<p>This site is secure.</p>
+<p>DCPE3B/03, Lee Jian Yong, P1420241</p>
+</body></html>
